# tuiflow

./: Cargo.toml  README.md  example_tuiflow.json  example_tuiflow.yaml  logo.txt
buildable-macro/: Cargo.toml
buildable-macro/src/: buildable.rs  lib.rs
docs/: components.puml  state_machine.puml
examples/: dora_the_explorah_tuiflow.yaml
src/: app.rs  builders.rs  input.rs  io.rs  main.rs  model.rs  ui.rs
src/app/: app_state.rs  configuration.rs  factory.rs  state.rs
src/builders/: state_builder.rs  transition_builder.rs  workflow_builder.rs
src/examples/: dora_the_explorah_tuiflow.yaml  example_tuiflow_future.yaml
src/io/: key_event_to_model_mapping.rs  sh_command_runner.rs
src/model/: control.rs  display.rs  error.rs  state.rs  transition.rs  variable_mapping.rs  workflow.rs
src/model/state/: builder.rs
src/model/transition/: builder.rs
src/model/variable_mapping/: error.rs  variable_mapper.rs
src/model/workflow/: builder.rs
src/ui/: body.rs  body_widget.rs  controls_widget.rs  key_control_view_model.rs  legend_widget.rs  main_widget.rs  title_bar_widget.rs  titlebar_widget.rs
tuiflow-app/: Cargo.toml
tuiflow-app/src/: configuration.rs  factory.rs  lib.rs  state.rs
tuiflow-cli/: Cargo.toml
tuiflow-cli/src/: lib.rs
tuiflow-model/: Cargo.toml
tuiflow-model-contracts/: Cargo.toml
tuiflow-model-contracts/src/: command_runner.rs  display.rs  error.rs  lib.rs  terminal_flow.rs
tuiflow-model/src/: model.rs
tuiflow-model/src/model/: command_runner.rs  control.rs  error.rs  state.rs  transition.rs  variable.rs  variable_mapping.rs  workflow.rs
tuiflow-sh/: Cargo.toml
tuiflow-sh/src/: lib.rs  sh_command.rs  sh_command_runner.rs
tuiflow-ui/: Cargo.toml
tuiflow-ui/src/: body.rs  controls_widget.rs  io.rs  lib.rs  main_widget.rs  title_bar_widget.rs
tuiflow-ui/src/io/: key_event_to_model_mapping.rs  (+1 more)
(+9 files in other folders)
