workspace = { members = ["buildable-macro"] }

[package]
name = "tuiflow"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"]}
regex = "1.11.1"
mockall = "0.13.1"
mockall_double = "0.3.1"
eyre = "0.6.12"
buildable-macro =  { path = "./buildable-macro" }
