workspace = { members = ["buildable-macro", "tuiflow-model"] }

[package]
name = "tuiflow"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9.33"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"]}
mockall = "0.13.1"
mockall_double = "0.3.1"
eyre = "0.6.12"
# buildable-macro =  { path = "./buildable-macro" }
tuiflow-model = { path = "./tuiflow-model" }