workspace = { members = [ "tuiflow-app", "tuiflow-model", "tuiflow-ui", "tuiflow-sh", "tuiflow-model-contracts"] }

[package]
name = "tuiflow"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde_yaml = "0.9.33"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"]}
eyre = "0.6.12"

tuiflow-app = { path = "./tuiflow-app" }
tuiflow-model = { path = "./tuiflow-model" }
tuiflow-sh = { path = "./tuiflow-sh" }
